# memoryOverTCPIP

./: CMakeLists.txt  GitNotes.txt  README.md
client/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt  main.cpp
